# drumkid2

./: .gitmodules  README.md  manual.md
code/: .gitignore  Beat.h  CMakeLists.txt  Sample.h  bugs.txt  buttons.txt  closedhat.h  constants.h  defaultbeats.h  defaultsamples.h  drumkid.cpp  drumkid.h  firstboot.txt  flashreference.txt  hw_config.c  kick.h  newbugs.txt  notes.txt  sevensegcharacters.h  sn74165.pio  snare.h
code/drumkid/: .gitignore  CMakeLists.txt  notes.txt
code/drumkid/dk/: Beat.h  CMakeLists.txt  dk.cpp  dk.h  hw_config.c  kick.h
code/drumkid/test1/: CMakeLists.txt
code/drumkid/test1/everything/: CMakeLists.txt  Sample.h  everything.cpp
code/drumkid/test1/inputs/: CMakeLists.txt  inputs.c
code/drumkid/test1/leds/: CMakeLists.txt  leds.c  leds.cpp
code/drumkid/test1/noise/: noise.c
code/drumkid/test1/sample/: CMakeLists.txt  closedhat.h  sample.c  sample.cpp  snare.h
code/drumkid/test1/sd/: CMakeLists.txt  hw_config.c  sd.cpp
code/drumkid/test1/sine_wave/: CMakeLists.txt  sine_wave.c
code/drumkid/test2/: CMakeLists.txt
code/drumkid/test2/noise/: CMakeLists.txt  noise.c
enclosure/eurorack/: dk2_04_test.FCStd
firmware/dkeuro2/: CMakeLists.txt  Config.h  dkeuro2.c  dkeuro2.cpp  dkeuro2.h  hw_config.c  notes.txt  testsample.h
firmware/dkeuro2/audio/: Audio.cpp  Audio.h  Channel.cpp  Channel.h  ChannelManager.cpp  ChannelManager.h  Kit.h  KitManager.cpp  KitManager.h  Sample.cpp  Sample.h  TestClap.h  TestHat.h  TestKick.h  TestTom.h
firmware/dkeuro2/hardware/: AnalogInputs.cpp  AnalogInputs.h  Buttons.cpp  Buttons.h  CardReader.cpp  CardReader.h  Leds.cpp  Leds.h  Memory.cpp  Memory.h  Pins.h  Triggers.cpp  Triggers.h  sn74595.pio
firmware/dkeuro2/interface/: Menu.cpp  Menu.h
firmware/dkeuro2/rhythm/: Aleatory.cpp  Aleatory.h  Beat.cpp  Beat.h  Transport.cpp  Transport.h
media/samples/_default/: 1.txt  2.txt  3.txt  4.txt
misc/displaypadtool/: displaypadtool-Job.nc  displaypadtool.FCStd  displaypadtool.FCStd1
misc/experiments/audio/: CMakeLists.txt  audio.cpp
misc/experiments/basic/: basic.cpp  drumkid.cpp
misc/experiments/timing/: CMakeLists.txt  timing.cpp
misc/gendocs/: index.js  package-lock.json  package.json
misc/hooks/: pre-commit.sh
pcb/: dk2.bak  dk2.kicad_sym
pcb/dk2_00/: #auto_saved_files#  cv_in.kicad_sch  cv_out.kicad_sch  dac.kicad_sch  dk2_00.kicad_pcb  dk2_00.kicad_pro  dk2_00.kicad_sch  europower.kicad_sch  fp-lib-table  midi.kicad_sch  muxin.kicad_sch  muxin1.kicad_sch  muxin2.kicad_sch  power.kicad_sch  readme.txt  shiftregin.kicad_sch  shiftregout.kicad_sch  sync.kicad_sch
pcb/dk2_00/production/: .~lock.bom.csv#  netlist.ipc
pcb/dk2_01/: #auto_saved_files#  dac.kicad_sch  dk2_01.kicad_pcb  dk2_01.kicad_pro  dk2_01.kicad_sch  fp-lib-table  muxin1.kicad_sch  muxin2.kicad_sch  power.kicad_sch  readme.txt  shiftregin.kicad_sch  shiftregout.kicad_sch  sym-lib-table  sync.kicad_sch
pcb/dk2_01/Library.pretty/: Jack_3.5mm_QingPu_WQP-PJ366ST_Vertical_Labelled.kicad_mod
pcb/dk2_02_bottom/: #auto_saved_files#  dac.kicad_sch  digital-in-out.kicad_sch  dk2_02_bottom.kicad_pcb  dk2_02_bottom.kicad_pro  dk2_02_bottom.kicad_sch  power.kicad_sch  readme.txt  shiftregout.kicad_sch
pcb/dk2_02_panel/: dk2_02_panel.kicad_pcb  dk2_02_panel.kicad_pro  dk2_02_panel.kicad_sch
pcb/dk2_02_panel/Panel.pretty/: MountingHole_6.4mm_M6.kicad_mod
pcb/dk2_02_panel/jlcpcb/: project.db
pcb/dk2_02_top/: dk2_02_top.kicad_pcb  dk2_02_top.kicad_pro  dk2_02_top.kicad_sch  muxin.kicad_sch  muxin1.kicad_sch  muxin2.kicad_sch  shiftregin.kicad_sch  shiftregout.kicad_sch
pcb/dk2_02_top/jlcpcb/: project.db
pcb/dk2_03_bottom/: #auto_saved_files#  cv.kicad_sch  dac.kicad_sch  digital-in-out.kicad_sch  dk2_03_bottom.kicad_pcb  dk2_03_bottom.kicad_pro  dk2_03_bottom.kicad_sch  europower.kicad_sch  power.kicad_sch
pcb/dk2_03_bottom/jlcpcb/: project.db
pcb/dk2_03_panel/: dk2_03_panel.kicad_pcb  dk2_03_panel.kicad_pro  dk2_03_panel.kicad_sch
pcb/dk2_03_panel/Panel.pretty/: Button_Hole.kicad_mod  Input_Jack_Hole.kicad_mod  Jack_Hole.kicad_mod  Output_Jack_Hole.kicad_mod  Pot_Hole.kicad_mod
pcb/dk2_03_top/: cv_in.kicad_sch  dk2_03_top.kicad_pcb  dk2_03_top.kicad_pro  dk2_03_top.kicad_sch  muxin1.kicad_sch  muxin2.kicad_sch  shiftregin.kicad_sch  shiftreginx.kicad_sch  shiftregout.kicad_sch
pcb/dk2_04_bottom/: #auto_saved_files#  digital-in-out.kicad_sch  dk2_04_bottom.kicad_pcb  dk2_04_bottom.kicad_pro  dk2_04_bottom.kicad_sch  pinout.txt  power.kicad_sch  shiftregin.kicad_sch
pcb/dk2_04_panel/: dk2_04_panel-F_Silkscreen.dxf  dk2_04_panel.kicad_pcb  dk2_04_panel.kicad_pro  dk2_04_panel.kicad_sch  fp-lib-table
pcb/dk2_04_top/: dk2_04_top.kicad_pcb  dk2_04_top.kicad_pro  dk2_04_top.kicad_sch  muxin1.kicad_sch  muxin2.kicad_sch  shiftreginx.kicad_sch
pcb/dk2_04b_bottom/: dac.kicad_sch  dk2_04b_bottom.kicad_pcb  dk2_04b_bottom.kicad_pro  muxin2.kicad_sch
pcb/dk2_04b_top/: dk2_04b_top.kicad_pcb  dk2_04b_top.kicad_pro  dk2_04b_top.kicad_sch  shiftregin.kicad_sch  shiftregout.kicad_sch  sync.kicad_sch
pcb/dk2_05/: #auto_saved_files#  dac.kicad_sch  digitalinout.kicad_sch  dk2_05.kicad_pcb  dk2_05.kicad_pro  dk2_05.kicad_sch  midi.kicad_sch  muxin1.kicad_sch  muxin2.kicad_sch  power.kicad_sch  readme.txt  shiftregin.kicad_sch  shiftreginx.kicad_sch  shiftregout.kicad_sch  sym-lib-table
pcb/dk2_05_panel/: dk2_05_panel.kicad_pcb  dk2_05_panel.kicad_pro
pcb/dk2_06/: dk2_06.kicad_pcb  dk2_06.kicad_pro  fp-lib-table  muxin1.kicad_sch
pcb/dk2_06_panel/: allcaps.py  dk2_06_panel.kicad_pcb  dk2_06_panel.kicad_pro  dk2_06_panel.kicad_sch
pcb/dk2_07/: dac.kicad_sch  dk2_07.kicad_pcb  dk2_07.kicad_pro  dk2_07.kicad_sch  muxin2.kicad_sch  shiftregout.kicad_sch  ~dk2_07.kicad_sch.lck
pcb/misc/: YAMAICHI_MICROSD_VERTICAL.kicad_mod
(+180 files in other folders)
